# mcgen-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/analysis/: CMakeLists.txt  rootanalyzer.cpp  rootanalyzer.h
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  beamgen.cpp  beamgen.h  config.h  defparser.cpp  dynamics.cpp  dynamics.h  fourvector.cpp  fourvector.h  generator.cpp  generator.h  lineshape.cpp  lineshape.h  nbody.cpp  nbody.h  particleid.cpp  particleid.h  rng.cpp  rng.h  targetgeom.cpp  targetgeom.h
src/rescatter/: CMakeLists.txt  event.cpp  event.h  main_gen_rescatter.cpp  particles.h  vertex1.cpp  vertex1.h  vertex2.cpp  vertex2.h  writer_ascii.cpp  writer_ascii.h  writer_truth.cpp  writer_truth.h
tests/: CMakeLists.txt  test_defparser.cpp  test_kinematics.cpp  test_rescatter.cpp
validation/: check_output.py  plot_hists.C  run_mech6.sh  run_mech6_analyze.sh
